--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello World!!</h1>
+<head>
+  <style>
+    p {background-color : rgb(255,255,0)}
+  </style>
+</head>
+
+<body>
+  <h1>Hello World</h1>
+  <p> If I were a train I'd be late</p>
+
+</body>
