--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <head>
   <style>
     p {background-color : rgb(255,255,0)}
+    .classe {
+      background-color : rgb(200,100,180)
+      align-selg: center
+    }
   </style>
 </head>
 
 <body>
   <h1>Hello World</h1>
   <p> If I were a train I'd be late</p>
+  
+  <span class="classe"></span>
 
 </body>
