--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <style>
     p {background-color : rgb(255,255,0)}
     .classe {
-      background-color : rgb(200,100,180)
-      align-selg: center
+      background-color: rgb(200,100,180)
+      align-self: center
     }
   </style>
 </head>
@@ -12,6 +12,6 @@
   <h1>Hello World</h1>
   <p> If I were a train I'd be late</p>
   
-  <span class="classe"></span>
+  <div class="classe"><p>Composing </p></div>
 
 </body>
