--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Hello World</h1>
-  <p> If I were a train I'd be late</p>
+  <p><a href="paint.html"> If I were a train I'd be late</a></p>
   
   <div class="classe"><p>Composing </p></div>
 
