--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <h1>Hello World</h1>
   <p><a href="paint.html"> If I were a train I'd be late</a></p>
   
-  <div class="classe"><p>Composing </p></div>
+  <div class="classe"><p><a href="blog.html">Composing </a></p></div>
 
 </body>
