--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 	<style>
 	#myCanvas {
 		z-index: auto;
-		position: fixed;
+		position: absolute;
 		padding: 0;
 		margin: auto;
 		display: block;
@@ -17,7 +17,7 @@
 	}
 	
 	#overlay {
-		position: fixed;
+		position: absolute;
 		display: block;
 		width: 100%;
 		height: 100%;
