--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 		color: black;
 		display: none;
 		transform: translate(-50%,-50%);
-		-ms-transform: translate(-50%,-50%);
+		//-ms-transform: translate(-50%,-50%);
 	}
 	
 	
