--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   <p><a href="paint.html"> If I were a train I'd be late</a></p>
   
   <div class="classe"><p><a href="blog.html">Composing </a></p></div>
+  
+  <div class="classe"><p><a href="blog2.html">Try again!</a></p></div>
 
 </body>
