--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
   <div class="classe"><p><a href="blog.html">Composing </a></p></div>
   
   <div class="classe"><p><a href="blog2.html">Try again!</a></p></div>
+  
+  <div class="classe"><p><a href="disegno.html">Playin'</a></p></div>
 
 </body>
