--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
   <div class="classe"><p><a href="blog2.html">Try again!</a></p></div>
   
   <div class="classe"><p><a href="disegno.html">Playin'</a></p></div>
+  
+  <div class="classe"><p><a href="frasifluttuanti.html"><strong>frasi fluttuanti</strong></a></p></div>
 
 </body>
