--- a/frasifluttuanti.html
+++ b/frasifluttuanti.html
@@ -166,7 +166,7 @@ Non saprei che farmene io, di questa scelta. <br><br></p></div>
 			}
 			
 			function mouseFunction(e){
-				var relative = {x: e.clientX - canvas.offsetLeft, y: e.clientY - canvas.offsetTop};
+				var relative = {x: e.clientX - canvas.offsetLeft, y: e.clientY - canvas.offsetTop + scrollY};
 				var phi = gamma;
 				k = 6;
 				var circlecenter = {x: center.x, y: center.y};
@@ -237,7 +237,7 @@ Non saprei che farmene io, di questa scelta. <br><br></p></div>
 			
 			function draw() {
 				ctx.clearRect(0,0,canvas.width,canvas.height);
-				if (transform && canvas.width > (w/5) && canvas.height > (h/5)){
+				if (transform && canvas.width > (w/4) && canvas.height > (h/4)){
 					canvas.width -= 1;
 					canvas.height -= 1;
 					center = {x: (canvas.width / 2), y: (canvas.height / 2)};
