--- a/frasifluttuanti.html
+++ b/frasifluttuanti.html
@@ -39,9 +39,7 @@
 </p></div>
 		<div class="text" id="t1">
 			<p>
-				Ci fu un tempo in cui vita e morte si succedevano in eterni cicli messi in moto da macchine dotate di strabiliante imperfezione in una sregolata e crudele armonia, la quale - imparziale e multiforme - infliggeva gioia e donava dolore a ogni essere capace, nella propria anonima intimit&agrave, di venerarla. 
-
-<br><br><br><br>
+				
 
 
 				<i>Voci indistinguibili provengono da un'unica sorgente. </i><br><br><br><br>
@@ -134,6 +132,19 @@ Esito: una rivendicazione accolta e una rifiutata.<br><br>
 Porre l'attenzione sui problemi giusti. Come? <br><br>
 &egrave solo uno dei casi in cui ci&ograve che &egrave vecchio vince. <br><br>
 Non saprei che farmene io, di questa scelta. <br><br></p></div>
+
+<div class="text" id="t6"><p>Ci fu un tempo in cui vita e morte si succedevano in eterni cicli messi in moto da macchine dotate di strabiliante imperfezione in una sregolata e crudele armonia, la quale - imparziale e multiforme - infliggeva gioia e donava dolore a ogni essere capace, nella propria anonima intimit&agrave, di venerarla. </p></div>
+
+
+
+
+
+
+
+
+
+
+
 		<script>
 			var w = window.innerWidth;
 			var h = window.innerHeight;	
@@ -147,7 +158,7 @@ Non saprei che farmene io, di questa scelta. <br><br></p></div>
 			var radius = Math.min(canvas.width, canvas.height) / 7;
 			
 			var colors = {pentagon: ["#f7cac9", "#E32934"], circle: ["#deeaee","#92a8d1"]};
-			var k = 6;
+			var k = 7;
 			var j = k;
 			var a;
 			var gamma = 0;
@@ -156,6 +167,8 @@ Non saprei che farmene io, di questa scelta. <br><br></p></div>
 			var RADIUS = radius;
 			var X = center.x;
 			var Y = center.y;
+			
+			var control = true;
 			
 			document.addEventListener("mousemove", mouseFunction, false);
 			document.addEventListener("click", mouseClick, false);
@@ -188,7 +201,7 @@ Non saprei che farmene io, di questa scelta. <br><br></p></div>
 				if (k < 5){
 					transform = true;
 					a = "t" + k;
-					for(var i = 0; i < 6; i++){
+					for(var i = 0; i < 7; i++){
 						document.getElementsByClassName("text")[i].style.display = "none";
 					}
 					document.getElementById(a).style.display = "block";
@@ -196,7 +209,7 @@ Non saprei che farmene io, di questa scelta. <br><br></p></div>
 					document.getElementById(a).style.top = hei + "px";
 				}
 				if (k == 5){
-					for(var i = 0; i < 6; i++){
+					for(var i = 0; i < 7; i++){
 						document.getElementsByClassName("text")[i].style.display = "none";
 					}
 					transform = false;
@@ -205,10 +218,21 @@ Non saprei che farmene io, di questa scelta. <br><br></p></div>
 					radius = RADIUS;
 					center.x = X;
 					center.y = Y;
-					a = "t" + k;
-					var hei = canvas.height + canvas.height/50;
-					document.getElementById(a).style.top = hei + "px";
-					document.getElementById(a).style.display = "block";
+					if (control){
+						a = "t" + k;
+						var hei = canvas.height + canvas.height/5000;
+						document.getElementById(a).style.top = hei + "px";
+						document.getElementById(a).style.display = "block";
+						control = false;
+					}
+					else{
+						k = 6;
+						a = "t" + k;
+						var hei = canvas.height + canvas.height/5000;
+						document.getElementById(a).style.top = hei + "px";
+						document.getElementById(a).style.display = "block";
+						control = true;
+					}
 					
 				}
 			}
