--- a/frasifluttuanti.html
+++ b/frasifluttuanti.html
@@ -4,7 +4,7 @@
 		<style>
 			.text{
 				position: absolute;
-				width: 50%;
+				width: 70%;
 				left: 0;
 				right: 0;
 				margin: auto;
@@ -130,7 +130,7 @@ Anonimato! Anarchia! Natura!<br><br>
 
 Esito: una rivendicazione accolta e una rifiutata.<br><br>
 Porre l'attenzione sui problemi giusti. Come? <br><br>
-&egrave solo uno dei casi in cui ci&ograve che &egrave vecchio vince. <br><br>
+&Egrave solo uno dei casi in cui ci&ograve che &egrave vecchio vince. <br><br>
 Non saprei che farmene io, di questa scelta. <br><br></p></div>
 
 <div class="text" id="t6"><p>Ci fu un tempo in cui vita e morte si succedevano in eterni cicli messi in moto da macchine dotate di strabiliante imperfezione in una sregolata e crudele armonia, la quale - imparziale e multiforme - infliggeva gioia e donava dolore a ogni essere capace, nella propria anonima intimit&agrave, di venerarla. </p></div>
